# sus-rs

./: .gitignore  Cargo.toml  README.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.svelte  app.css
frontend/src/lib/: OutputElement.svelte  store.ts
migrations/: 20220922105033_url_database.sql
public/: styles.css
src/: database.rs  main.rs  shortener.rs
templates/: index.html.tera
