[package]
name = "sus-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.144"
serde_derive = "1.0.144"
md-5 = "0.10.4"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

