[package]
name = "sus-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.144"
serde_derive = "1.0.144"
md-5 = "0.10.4"
dotenv = "0.15.0"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dependencies.sqlx]
version = "0.6"
features = ["runtime-tokio-rustls", "postgres"]

[dependencies.tokio]
version = "1.21.1"
features = ["full"]
